[metadata]
name = pygwin0
version = 0.0.1
author = themixray
author_email = simindeymo@gmail.com
description = A library for creating Python applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/themixray/pygwin
project_urls =
    Bug Tracker = https://github.com/themixray/pygwin/issues
    Wiki = https://github.com/themixray/pygwin/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
