[metadata]
name = pgw
version = 0.1.2
author = themixray
author_email = simindeymo@gmail.com
description = Python Grapchical Window.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/themixray/pygwin
project_urls =
    Bug Tracker = https://github.com/themixray/pygwin/issues
    Wiki = https://github.com/themixray/pygwin/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
